# CmdSeqEdit

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build.yml  codeql.yml
ext/: _ext.cmake
installer/: _installer.cmake
installer/linux/: desktop.in  mime-type.xml.in
res/: logo.rc  res.qrc
res/src/: logo.xcf  mockup.psd
src/: Main.cpp  Version.h.in  _src.cmake
src/utility/: Options.cpp  Options.h  TGADecoder.cpp
src/widgets/: CommandList.cpp  CommandList.h  CommandProperties.cpp  CommandProperties.h  SequenceList.cpp  SequenceList.h  Window.cpp  Window.h
